--- a/php/phpfpm7.1/develop/Dockerfile
+++ b/php/phpfpm7.1/develop/Dockerfile
@@ -97,7 +97,7 @@ RUN ver=$(cat /etc/alpine-release | awk -F '.' '{printf "%s.%s", $1, $2;}') \
 	&& docker-php-ext-install -j${NPROC} mysqli \
 	\
 # pdo
-	&& docker-php-ext-install -j${NPROC} pdo_mysql \
+	&& docker-php-ext-install -j${NPROC} pdo \
 	\
 # pdo_mysql
 	&& docker-php-ext-install -j${NPROC} pdo_mysql \
