--- a/php/phpfpm7.2/git/Dockerfile
+++ b/php/phpfpm7.2/git/Dockerfile
@@ -3,7 +3,7 @@ FROM php:7.2-fpm-alpine
 MAINTAINER stanzhou "stanzhou@zhen22.com"
 
 #git
-RUN apk --update add git openssh && \
+RUN apk --update add git openssh sudo && \
     rm -rf /var/lib/apt/lists/* && \
     rm /var/cache/apk/*
 
