--- a/baota-panel/Dockerfile
+++ b/baota-panel/Dockerfile
@@ -1,17 +1,20 @@
 FROM centos:7
 MAINTAINER stanzhou m@sq.mk
 
-#更新系统
-RUN yum -y update \
-    && yum -y install wget
-
 #设置entrypoint和letsencrypt映射到www文件夹下持久化
 COPY entrypoint.sh /entrypoint.sh
-RUN mkdir -p /www/letsencrypt \
+
+#更新系统
+RUN yum -y update \
+    && yum -y install wget \
+    && mkdir -p /www/letsencrypt \
     && ln -s /www/letsencrypt /etc/letsencrypt \
     && rm -f /etc/init.d \
     && mkdir /www/init.d \
     && ln -s /www/init.d /etc/init.d \
+    #安装宝塔
+    && wget -O install.sh http://download.bt.cn/install/install_6.0.sh \
+    && sh install.sh \
     && chmod +x /entrypoint.sh
 
 CMD /entrypoint.sh
