--- a/nginx/1.6/Dockerfile
+++ b/nginx/1.6/Dockerfile
@@ -48,6 +48,9 @@ RUN GPG_KEYS=B0F4253373F8F6F510D42178520A9993A1C052F8 \
         --with-stream_ssl_preread_module \
         --with-cc-opt='-I/usr/local/include' \
         --with-ld-opt='-L/usr/local/lib' \
+        --add-dynamic-module=/usr/src/ngx_http_geoip2_module \
+        --add-module=/usr/src/lua-nginx-module-0.10.15 \
+        --add-module=/usr/src/ngx_devel_kit-0.3.0 \
         " \
     && addgroup -S nginx \
     && adduser -D -S -h /var/cache/nginx -s /sbin/nologin -G nginx nginx \
@@ -69,6 +72,11 @@ RUN GPG_KEYS=B0F4253373F8F6F510D42178520A9993A1C052F8 \
         gd-dev \
     && curl -fSL http://nginx.org/download/nginx-$NGINX_VERSION.tar.gz -o nginx.tar.gz \
     && curl -fSL http://nginx.org/download/nginx-$NGINX_VERSION.tar.gz.asc  -o nginx.tar.gz.asc \
+    #lua脚本支持
+    && git clone --recursive  http://luajit.org/git/luajit-2.0.git \
+    && curl -fSL https://github.com/openresty/lua-nginx-module/archive/v0.10.15.tar.gz  -o lua-nginx-module.tar.gz \
+    && curl -fSL https://github.com/simplresty/ngx_devel_kit/archive/v0.3.0.tar.gz  -o ngx_devel_kit.tar.gz \
+    #geoip2
     && git clone --recursive https://github.com/maxmind/libmaxminddb.git \
     && git clone --recursive https://github.com/leev/ngx_http_geoip2_module.git \
     && export GNUPGHOME="$(mktemp -d)" \
@@ -88,10 +96,27 @@ RUN GPG_KEYS=B0F4253373F8F6F510D42178520A9993A1C052F8 \
     && mkdir -p /usr/src \
     && tar -zxC /usr/src -f nginx.tar.gz \
     && rm nginx.tar.gz \
+    #geoip2
     && cp -r ./libmaxminddb /usr/src \
     && cp -r ./ngx_http_geoip2_module /usr/src \
     && rm -rf libmaxminddb \
     && rm -rf ngx_http_geoip2_module \
+    #lua
+    && cp -r ./luajit-2.0 /usr/src \
+    && tar -zxC /usr/src -f lua-nginx-module.tar.gz \
+    && tar -zxC /usr/src -f ngx_devel_kit.tar.gz \
+    && rm lua-nginx-module.tar.gz \
+    && rm ngx_devel_kit.tar.gz \
+    && export LUAJIT_LIB=/usr/local/lib \
+    && export LUAJIT_INC=/usr/local/include/luajit-2.0 \
+    && cd /usr/src/luajit-2.0 \
+    && make && make install \
+    && mkdir /etc/ld.so.conf.d \
+    && echo '/usr/local/lib' >> /etc/ld.so.conf.d/lua.conf \
+#    && ldconfig \
+    && cd /usr/src \
+    && rm -rf luajit-2.0 \
+    #install
     && export CFLAGS="-O2" \
         CPPFLAGS="-O2" \
         LDFLAGS="-O2" \
@@ -101,7 +126,7 @@ RUN GPG_KEYS=B0F4253373F8F6F510D42178520A9993A1C052F8 \
     && make -j$(getconf _NPROCESSORS_ONLN) \
     && make install \
     && cd /usr/src/nginx-$NGINX_VERSION \
-    && ./configure $CONFIG --add-dynamic-module=/usr/src/ngx_http_geoip2_module \
+    && ./configure $CONFIG \
     && make -j$(getconf _NPROCESSORS_ONLN) \
     && make install \
     && mkdir -p /usr/share/nginx/html/ \
@@ -112,6 +137,8 @@ RUN GPG_KEYS=B0F4253373F8F6F510D42178520A9993A1C052F8 \
     && rm -rf /usr/src/nginx-$NGINX_VERSION \
     && rm -rf /usr/src/libmaxminddb \
     && rm -rf /usr/src/ngx_http_geoip2_module \
+    && rm -rf /usr/src/lua-nginx-module-0.10.15 \
+    && rm -rf /usr/src/ngx_devel_kit-0.3.0 \
     && apk add --no-cache --virtual .gettext gettext \
     && mv /usr/bin/envsubst /tmp/ \
     && runDeps="$( \
