修复php5.6 iconv返回空的问题

--- a/php/phpfpm5.6/develop/Dockerfile
+++ b/php/phpfpm5.6/develop/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:5.6-fpm-alpine
 MAINTAINER dishuostecli "dishuostecli@zhen22.com"
 
-ARG ALPINE_REPO=http://mirrors.ustc.edu.cn
+ARG ALPINE_REPO=http://mirrors.aliyun.com
 ARG URL_PREFIX=
 
 ENV PHP_PHAR_DIR="${PHP_INI_DIR}/phar"
@@ -18,15 +18,16 @@ ENV TIMEZONE="Asia/Shanghai" \
         MONGO_VERSION="1.6.14" \
         MONGO_SHA1="ceb59e08ee2e71dda23ba5c0989fd5172dea107d" \
         XDEBUG_VERSION="2.5.1" \
-        XDEBUG_SHA1="0efb4fd7b2c3f6b3130db0145492a56df41f7c55" 
+        XDEBUG_SHA1="0efb4fd7b2c3f6b3130db0145492a56df41f7c55"
 
 RUN ver=$(cat /etc/alpine-release | awk -F '.' '{printf "%s.%s", $1, $2;}') \
 	&& repos=/etc/apk/repositories \
         && mv -f ${repos} ${repos}_bk \
 	&& echo "${URL_PREFIX}${ALPINE_REPO}/alpine/v${ver}/main" > ${repos} \
 	&& echo "${URL_PREFIX}${ALPINE_REPO}/alpine/v${ver}/community" >> ${repos} \
-	&& echo "@edge ${URL_PREFIX}${ALPINE_REPO}/alpine/edge/main" >> ${repos} \
-	&& echo "@testing ${URL_PREFIX}${ALPINE_REPO}/alpine/edge/testing" >> ${repos} \
+#	&& echo "${URL_PREFIX}${ALPINE_REPO}/alpine/edge/community" >> ${repos} \
+#  && echo "${URL_PREFIX}${ALPINE_REPO}/alpine/edge/main" >> ${repos} \
+  && echo "${URL_PREFIX}${ALPINE_REPO}/alpine/edge/testing" >> ${repos} \
         \
 	&& apk add --no-cache tzdata \
 	&& ln -sf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime \
@@ -116,20 +117,22 @@ RUN ver=$(cat /etc/alpine-release | awk -F '.' '{printf "%s.%s", $1, $2;}') \
         && rm imagick.tar.gz \
         && docker-php-ext-install /tmp/imagick \
         && rm -r /tmp/imagick \
+# iconv
+  && apk add --no-cache gnu-libiconv --repository ${URL_PREFIX}${ALPINE_REPO}/alpine/edge/community/ --update-cache --allow-untrusted \
 	\
 # swoole
-        && apk add --no-cache --virtual .build-deps \
-                linux-headers \
-                zlib-dev \
-        \
-        && curl -fsSL "${URL_PREFIX}https://github.com/swoole/swoole-src/archive/v${SWOOLE_VERSION}.tar.gz" -o swoole.tar.gz \
-        && echo "${SWOOLE_SHA1} *swoole.tar.gz" | sha1sum -c - \
-        && mkdir -p /tmp/swoole \
-        && tar -xf swoole.tar.gz -C /tmp/swoole --strip-components=1 \
-        && rm swoole.tar.gz \
-        && docker-php-ext-configure /tmp/swoole --enable-swoole \
-        && docker-php-ext-install -j${NPROC} /tmp/swoole \
-        && rm -r /tmp/swoole \
+#        && apk add --no-cache --virtual .build-deps \
+#                linux-headers \
+#                zlib-dev \
+#        \
+#        && curl -fsSL "${URL_PREFIX}https://github.com/swoole/swoole-src/archive/v${SWOOLE_VERSION}.tar.gz" -o swoole.tar.gz \
+#        && echo "${SWOOLE_SHA1} *swoole.tar.gz" | sha1sum -c - \
+#        && mkdir -p /tmp/swoole \
+#        && tar -xf swoole.tar.gz -C /tmp/swoole --strip-components=1 \
+#        && rm swoole.tar.gz \
+#        && docker-php-ext-configure /tmp/swoole --enable-swoole \
+#        && docker-php-ext-install -j${NPROC} /tmp/swoole \
+#        && rm -r /tmp/swoole \
 # redis
         && curl -fsSL "${URL_PREFIX}https://github.com/phpredis/phpredis/archive/${REDIS_VERSION}.tar.gz" -o redis.tar.gz \
 	&& echo "${REDIS_SHA1} *redis.tar.gz" | sha1sum -c - \
@@ -139,12 +142,12 @@ RUN ver=$(cat /etc/alpine-release | awk -F '.' '{printf "%s.%s", $1, $2;}') \
         && docker-php-ext-install -j${NPROC} /tmp/redis \
         && rm -r /tmp/redis \
 #gearman
-    &&  apk add --no-cache --virtual .build-deps gearman-dev gearman-libs gcc autoconf g++ zlib-dev make  \
-        --repository ${URL_PREFIX}${ALPINE_REPO}/alpine/edge/community \
-        --repository ${URL_PREFIX}${ALPINE_REPO}/alpine/edge/main \
-        --repository ${URL_PREFIX}${ALPINE_REPO}/alpine/edge/testing \
-    && pecl install gearman && docker-php-ext-enable gearman \
-    && apk del --force gearman-dev gcc autoconf g++ zlib-dev make \
+#    &&  apk add --no-cache --virtual .build-deps gearman-dev gearman-libs gcc autoconf g++ zlib-dev make  \
+#        --repository ${URL_PREFIX}${ALPINE_REPO}/alpine/edge/community \
+#        --repository ${URL_PREFIX}${ALPINE_REPO}/alpine/edge/main \
+#        --repository ${URL_PREFIX}${ALPINE_REPO}/alpine/edge/testing \
+#    && pecl install gearman && docker-php-ext-enable gearman \
+#    && apk del --force gearman-dev gcc autoconf g++ zlib-dev make \
 # xdebug
     && curl -fsSL "${URL_PREFIX}https://xdebug.org/files/xdebug-${XDEBUG_VERSION}.tgz" -o xdebug.tar.gz \
  	&& echo "${XDEBUG_SHA1} *xdebug.tar.gz" | sha1sum -c - \
@@ -166,7 +169,7 @@ RUN ver=$(cat /etc/alpine-release | awk -F '.' '{printf "%s.%s", $1, $2;}') \
          && rm -r /tmp/xdebug \
 # mongo legacy
         && apk add --update \
-                libressl-dev@edge \
+                libressl-dev \
         && curl -fsSL "${URL_PREFIX}https://github.com/mongodb/mongo-php-driver-legacy/archive/${MONGO_VERSION}.tar.gz" -o mongo.tar.gz \
 	&& echo "${MONGO_SHA1} *mongo.tar.gz" | sha1sum -c - \
         && mkdir -p /tmp/mongo \
@@ -181,3 +184,4 @@ RUN ver=$(cat /etc/alpine-release | awk -F '.' '{printf "%s.%s", $1, $2;}') \
     && rm /var/cache/apk/* \
 # end
     && mv -f ${repos}_bk ${repos}
+ENV LD_PRELOAD /usr/lib/preloadable_libiconv.so php
