--- a/php/phpfpm7.4/develop/Dockerfile
+++ b/php/phpfpm7.4/develop/Dockerfile
@@ -44,7 +44,7 @@ RUN ver=$(cat /etc/alpine-release | awk -F '.' '{printf "%s.%s", $1, $2;}') \
         && chmod +x ${PHP_PHAR_DIR}/composer \
         \
 # 安装扩展
-  && install-php-extensions bcmath exif opcache pcntl sockets \
+  && install-php-extensions bcmath exif opcache pcntl sockets calendar\
      gettext zip gd gmp \
      mysqli pdo_mysql \
      imagick mcrypt \
